dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -1392,26 +1392,44 @@ function renderTable(){
       <tr data-id="${item._id}">
         ${columns.map(col=>{
           let v=item[col.id]??'-';
-          if(col.id==='occurrenceDate') v=item.occurrenceDateISO || item.createdAtISO || '-';
-          else if(col.id==='occurrenceTime') v=item.occurrenceTimeNorm||'-';
-          else if(col.id==='restartTime') v=item.restartTimeNorm||'-';
-          else if(col.id==='status'){
-            const t=item.status==='complete'?'完了':'技術入力待ち';
-            const cls=item.status==='complete'?'status-complete':'status-pending';
-            v=`<span class="status-badge ${cls}">${t}</span>`;
-          }else if(col.id==='photos'){
-            const m=(item.mfgPhotoUrls||[]).length, t=(item.techPhotoUrls||[]).length;
-            const total=m+t; v = total>0?`<button class="photo-btn" onclick="event.stopPropagation(); showPhotosOnly('${item._id}')">📷 ${total}枚</button>`:'-';
-          }else if(col.id==='stopMinutes'){
-            // ← ここをバッジ表示のみに統一
+
+          if (col.id==='occurrenceDate') {
+            v = item.occurrenceDateISO || item.createdAtISO || '-';
+
+          } else if (col.id==='occurrenceTime') {
+            v = item.occurrenceTimeNorm || '-';
+
+          } else if (col.id==='restartTime') {
+            v = item.restartTimeNorm || '-';
+
+          } else if (col.id==='status') {
+            const statusText = (item.status==='complete') ? '完了' : '技術入力待ち';
+            const statusCls  = (item.status==='complete') ? 'status-complete' : 'status-pending';
+            v = `<span class="status-badge ${statusCls}">${statusText}</span>`;
+
+          } else if (col.id==='photos') {
+            const mCnt = (item.mfgPhotoUrls||[]).length;
+            const techCnt = (item.techPhotoUrls||[]).length;
+            const total = mCnt + techCnt;
+            v = total>0
+              ? `<button class="photo-btn" onclick="event.stopPropagation(); showPhotosOnly('${item._id}')">📷 ${total}枚</button>`
+              : '-';
+
+          } else if (col.id==='stopMinutes') {
+            // 停止時間はバッジ表示で統一
             v = buildStopBadge(item.stopMinutes, {compact:true});
-          }else if(col.id==='anomalyContent'||col.id==='actionTaken'){
-            const s=v||''; v=(s.length>30?s.slice(0,30)+'...':s);
+
+          } else if (col.id==='anomalyContent' || col.id==='actionTaken') {
+            const s = v || '';
+            v = (s.length>30 ? s.slice(0,30)+'...' : s);
           }
+
           return `<td>${v}</td>`;
         }).join('')}
       </tr>`).join('');
-    tbody.querySelectorAll('tr').forEach(tr=>tr.addEventListener('click',()=>showDetail(tr.getAttribute('data-id'))));
+    tbody.querySelectorAll('tr').forEach(tr=>{
+      tr.addEventListener('click',()=>showDetail(tr.getAttribute('data-id')));
+    });
   }
 
   document.getElementById('resultCount').textContent=display.length;
