--- a/dateview.html
+++ b/dateview.html
@@ -563,6 +563,7 @@ body.dark .btn-pill .spark-dates .spark-end{
 
   let focusedDept = null;
   let currentSort = { column:null, direction:'asc' };
+let visibleColumns = []; // 表示中のカラムID一覧を格納する配列（未定義エラー防止）
 
   /* ===== ユーティリティ ===== */
   const pad2 = n => String(n).padStart(2,'0');
