--- a/dateview.html
+++ b/dateview.html
@@ -563,8 +563,12 @@ body.dark .btn-pill .spark-dates .spark-end{
 
   let focusedDept = null;
   let currentSort = { column:null, direction:'asc' };
-let visibleColumns = []; // 表示中のカラムID一覧を格納する配列（未定義エラー防止）
-
+const DEFAULT_COLUMNS = [
+  'serialNo','department','lineName',
+  'occurrenceDate','occurrenceTime',
+  'stopMinutes','handler','photos','status'
+];
+let visibleColumns = [...DEFAULT_COLUMNS]; // ←常に既定を持つ
   /* ===== ユーティリティ ===== */
   const pad2 = n => String(n).padStart(2,'0');
   const clamp = (v,lo,hi)=>Math.max(lo,Math.min(hi,v));
@@ -1533,9 +1537,21 @@ function showDetail(id){
 }
   /* ===== 表示項目＆サイズ設定 ===== */
   function loadSettings(){
-    // 列
-    const saved=localStorage.getItem('datasheetColumns');
-    if(saved) visibleColumns=JSON.parse(saved);
+// 列
+const saved = localStorage.getItem('datasheetColumns'); // ←キー名はこのままでOK
+try{
+  const parsed = saved ? JSON.parse(saved) : null;
+  if (Array.isArray(parsed) && parsed.length){
+    // 定義されている列だけに絞るガード
+    visibleColumns = parsed.filter(id => allColumns.some(c => c.id === id));
+    if (!visibleColumns.length) visibleColumns = [...DEFAULT_COLUMNS];
+  }else{
+    visibleColumns = [...DEFAULT_COLUMNS];
+  }
+}catch(e){
+  console.warn('column settings parse error', e);
+  visibleColumns = [...DEFAULT_COLUMNS];
+}
     // 表示件数
     const savedLimit=localStorage.getItem('displayLimit');
     if(savedLimit!==null){
