--- a/dateview.html
+++ b/dateview.html
@@ -563,11 +563,29 @@ body.dark .btn-pill .spark-dates .spark-end{
 
   let focusedDept = null;
   let currentSort = { column:null, direction:'asc' };
-const DEFAULT_COLUMNS = [
+
+  // ==== 列定義（表示項目一覧） ====
+const allColumns = [
+  { id:'serialNo', label:'整理No', sortable:true },
+  { id:'department', label:'部署', sortable:true, filterable:true },
+  { id:'lineName', label:'ライン', sortable:true, filterable:true },
+  { id:'occurrenceDate', label:'発生日', sortable:true },
+  { id:'occurrenceTime', label:'発生時刻', sortable:true },
+  { id:'restartTime', label:'再開時刻', sortable:true },
+  { id:'stopMinutes', label:'停止時間', sortable:true },
+  { id:'handler', label:'処置者', sortable:true },
+  { id:'anomalyContent', label:'異常内容', sortable:false },
+  { id:'actionTaken', label:'対応内容', sortable:false },
+  { id:'photos', label:'写真', sortable:false },
+  { id:'status', label:'状態', sortable:true }
+];
+
+  const DEFAULT_COLUMNS = [
   'serialNo','department','lineName',
   'occurrenceDate','occurrenceTime',
   'stopMinutes','handler','photos','status'
 ];
+  
 let visibleColumns = [...DEFAULT_COLUMNS]; // ←常に既定を持つ
   /* ===== ユーティリティ ===== */
   const pad2 = n => String(n).padStart(2,'0');
