dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -563,7 +563,7 @@ body.dark .btn-pill .spark-dates .spark-end{
 
   let focusedDept = null;
   let currentSort = { column:null, direction:'asc' };
-
+let displayLimit = 25; // ← これを追加
   // ==== 列定義（表示項目一覧） ====
 const allColumns = [
   { id:'serialNo', label:'整理No', sortable:true },
