dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -1109,6 +1109,9 @@ function drawShiftMarker(ctx, canvas, opts){
     if(!canvas) return;
     const dpr=window.devicePixelRatio||1;
     const cssW=canvas.clientWidth||120, cssH=canvas.clientHeight||parseFloat(getComputedStyle(canvas).height);
+    // ▼ 親カードの実際の幅に合わせて再取得
+const parentW = canvas.parentElement?.offsetWidth || cssW;
+canvas.style.width = parentW + 'px';
     canvas.width=Math.max(1,Math.floor(cssW*dpr));
     canvas.height=Math.max(1,Math.floor(cssH*dpr));
     const ctx=canvas.getContext('2d'); if(!ctx) return;
@@ -1123,7 +1126,16 @@ function drawShiftMarker(ctx, canvas, opts){
   const hour = (8 + opts.markerIndex) % 24; // 8:00 起点
   drawShiftMarker(ctx, canvas, {markerIndex:opts.markerIndex, count:n, label:String(hour)});
 }
+// === Y軸最大値ラベル表示 ===
+ctx.font = `${10*dpr}px 'Segoe UI', sans-serif`;
+ctx.fillStyle = document.body.classList.contains('theme-dark')
+  ? 'rgba(255,255,255,0.7)' : 'rgba(0,0,0,0.6)';
+ctx.textAlign = 'right';
+ctx.textBaseline = 'top';
 
+// スケールを反映した位置（上端付近）に描画
+const label = `max:${Math.round(max)}`;
+ctx.fillText(label, canvas.width - pad, pad * 0.5);
     ctx.strokeStyle=color; ctx.lineWidth=2*dpr; ctx.beginPath();
     for(let i=0;i<n;i++){
       const v=values[i];
