dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -719,7 +719,17 @@ function getDeptWeekday30hAvgRate(dept){
   const hours = days * 24;
   return deptData.length / hours;
 }
-
+// ★ 追加：キャンバスの実サイズをCSSサイズ×DPRに揃える
+function ensureCanvasResolution(canvas){
+  const dpr = window.devicePixelRatio || 1;
+  // CSSピクセルを整数で取る（小数だとぼやけの原因になる）
+  const cssW = Math.floor(canvas.clientWidth  || 120);
+  const cssH = Math.floor(parseFloat(getComputedStyle(canvas).height) || 40);
+  const needW = Math.max(1, Math.floor(cssW * dpr));
+  const needH = Math.max(1, Math.floor(cssH * dpr));
+  if (canvas.width !== needW)  canvas.width  = needW;
+  if (canvas.height !== needH) canvas.height = needH;
+}
 function getDeptSparkColor(dept){
   const rateToday = getDeptTodayRate(dept);            // 今日の件/時
   const baseRate  = getDeptWeekday30hAvgRate(dept);    // 平日30日平均の件/時
@@ -1109,11 +1119,9 @@ function drawShiftMarker(ctx, canvas, opts){
     if(!canvas) return;
     const dpr=window.devicePixelRatio||1;
     const cssW=canvas.clientWidth||120, cssH=canvas.clientHeight||parseFloat(getComputedStyle(canvas).height);
+    
     // ▼ 親カードの実際の幅に合わせて再取得
-const parentW = canvas.parentElement?.offsetWidth || cssW;
-canvas.style.width = parentW + 'px';
-    canvas.width=Math.max(1,Math.floor(cssW*dpr));
-    canvas.height=Math.max(1,Math.floor(cssH*dpr));
+ensureCanvasResolution(canvas);
     const ctx=canvas.getContext('2d'); if(!ctx) return;
     ctx.clearRect(0,0,canvas.width,canvas.height);
     const n=values.length; if(!n) return;
@@ -1156,9 +1164,8 @@ ctx.fillText(label, canvas.width - pad, pad * 0.5);
   function drawStackedSpark(canvas, seriesList, colors=['#8ab4f8','#a3e0c0','#f9c58d','#f7a9b8','#c9b6f2'], opts={}){
     if(!canvas) return;
     const dpr=window.devicePixelRatio||1;
-    const cssW=canvas.clientWidth||120, cssH=canvas.clientHeight||parseFloat(getComputedStyle(canvas).height);
-    canvas.width=Math.max(1,Math.floor(cssW*dpr));
-    canvas.height=Math.max(1,Math.floor(cssH*dpr));
+    
+     ensureCanvasResolution(canvas);
     const ctx=canvas.getContext('2d'); if(!ctx) return;
     ctx.clearRect(0,0,canvas.width,canvas.height);
     const L=seriesList?.[0]?.length||0; if(!L) return;
