--- a/dateview.html
+++ b/dateview.html
@@ -1135,11 +1135,16 @@ ensureCanvasResolution(canvas);
   drawShiftMarker(ctx, canvas, {markerIndex:opts.markerIndex, count:n, label:String(hour)});
 }
 // === Y軸最大値ラベル表示 ===
+// === Y軸最大値ラベル（数値のみ） ===
 ctx.font = `${10*dpr}px 'Segoe UI', sans-serif`;
 ctx.fillStyle = document.body.classList.contains('theme-dark')
-  ? 'rgba(255,255,255,0.7)' : 'rgba(0,0,0,0.6)';
+  ? 'rgba(255,255,255,0.65)' : 'rgba(0,0,0,0.55)';
 ctx.textAlign = 'right';
 ctx.textBaseline = 'top';
+
+// 数値のみ。0～1の時は1表示で視認性維持（必要なければMath.max外してOK）
+const label = String(Math.max(1, Math.round(max)));
+ctx.fillText(label, canvas.width - pad, pad * 0.5);
 
 // スケールを反映した位置（上端付近）に描画
 const label = `max:${Math.round(max)}`;
