dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -793,7 +793,17 @@ function getDeptSparkColor(dept){
     });
     renderDeptBar();
     applyFilters();
-  }
+      drawAllSparklines();
+
+  // ★ ここに貼る
+  const ro = new ResizeObserver(() => {
+    requestAnimationFrame(() => drawAllSparklines());
+  });
+  ['deptBar','linesGrid','serialsGrid'].forEach(id=>{
+    const el = document.getElementById(id);
+    if (el) ro.observe(el);
+  });
+}
 
   /* ===== 部署バー ===== */
 function renderDeptBar(){
@@ -865,7 +875,6 @@ bar.querySelectorAll('[data-role="dept"]').forEach(btn=>{
     drawAllSparklines();
   });
 });
-
 
   drawAllSparklines();
   let timer=null;
