dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -128,20 +128,35 @@
     contain: layout;  /* レイアウト分離で拡大時のはみ出しを抑制 */
   }
   .btn-pill{
-    --bd: 2px;
-    position:relative; overflow:hidden;
-    display:inline-flex; flex-direction:column; align-items:center; justify-content:flex-start;
-    padding:var(--pill-pad-v) var(--pill-pad-h);
-    border:var(--bd) solid var(--border); background:var(--card); border-radius:12px;
-    cursor:pointer; font-size:var(--pill-font); font-weight:700; transition:.15s ease; text-align:center; color:var(--ink);
-    min-width:var(--pill-minw);
-    flex: 1 1 var(--pill-minw);   /* 拡大時も折り返しで重なりを回避 */
-    word-break:break-word;        /* 長文対策 */
-    box-shadow: var(--shadow-2);
-  }
-  .btn-pill:hover{border-color:var(--brand);background:rgba(102,126,234,.06)}
+  --bd: 2px;
+  position:relative; overflow:hidden;
+  display:inline-flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;   /* ← ★ここを flex-start から center に変更 */
+  padding:var(--pill-pad-v) var(--pill-pad-h);
+  border:var(--bd) solid var(--border);
+  background:var(--card);
+  border-radius:12px;
+  cursor:pointer;
+  font-size:var(--pill-font);
+  font-weight:700;
+  transition:.15s ease;
+  text-align:center;
+  color:var(--ink);
+  min-width:var(--pill-minw);
+  flex:1 1 var(--pill-minw);
+  word-break:break-word;
+  box-shadow: var(--shadow-2);
+}
 
-  /* 選択強調 */
+.btn-pill canvas{
+  display:block;
+  margin:auto;
+  height:28px;
+  width:90%;
+}
+ /* 選択強調 */
   .btn-pill.active{
     border-color:var(--chip-on);
     box-shadow:0 0 0 3px rgba(59,130,246,.25), 0 4px 16px rgba(59,130,246,.15);
