dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -1475,12 +1475,13 @@ function filterByDate(dataArr){
 
     filteredData = allData.filter(it=>{
       const occMs = getOccurrenceMsLocal(it);
-      if(fromMs!==null || toMs!==null){
-        if (occMs != null) {
-          if(fromMs!==null && occMs<fromMs) return false;
-          if(toMs!==null   && occMs>toMs)   return false;
-        }
-      }
+   if(fromMs!==null || toMs!==null){
+if (occMs == null) return false;
+if(fromMs!==null && occMs<fromMs) return false;
+if(toMs!==null   && occMs>toMs)   return false;
+}
+
+  
 
       const dept=it.departmentNormalized||'未設定';
       const line=it.lineNameNormalized||'未設定';
