dateview.html を更新

--- a/dateview.html
+++ b/dateview.html
@@ -1491,14 +1491,16 @@ if(toMs!==null   && occMs>toMs)   return false;
       const dept=it.departmentNormalized||'未設定';
       const line=it.lineNameNormalized||'未設定';
       const sn  =it.serialNo||'未設定';
-
-      if(selectedSerials.size>0){
-        if(!selectedSerials.has(`${dept}||${line}||${sn}`)) return false;
-      }else if(selectedLines.size>0){
-        if(!selectedLines.has(`${dept}||${line}`)) return false;
-      }else if(selectedDepts.size>0){
-        if(!selectedDepts.has(dept)) return false;
-      }
+// 部署・ライン・整理No はすべて AND 条件で絞り込み
+if (selectedDepts.size > 0 && !selectedDepts.has(dept)) {
+  return false;
+}
+if (selectedLines.size > 0 && !selectedLines.has(`${dept}||${line}`)) {
+  return false;
+}
+if (selectedSerials.size > 0 && !selectedSerials.has(`${dept}||${line}||${sn}`)) {
+  return false;
+}
       return true;
     });
 
